samples/_failures_safe/1761218097_aa0349_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ffeaef6a.c: In function ‘main’:
./samples/SAFE/__tmp_ffeaef6a.c:157:16: error: missing terminating " character
  157 |         printf("%s
      |                ^~~
./samples/SAFE/__tmp_ffeaef6a.c:157:9: error: expected expression at end of input
  157 |         printf("%s
      |         ^~~~~~
./samples/SAFE/__tmp_ffeaef6a.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ffeaef6a.c:157:9: error: expected declaration or statement at end of input
